--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
   
    
-    <title>Carbook Admin</title>
+    <title>Carbook-Admin</title>
   </head>
   <body>
     <div id="app"></div>
